Migrate project to React + Vite setup
Replaces static HTML and assets with a React + Vite structure. Adds configuration files for ESLint and Vite, updates README with setup instructions, and introduces React component-based architecture. Removes legacy HTML, CSS, and image files, transitioning the project to a modern frontend stack.

--- a/index.html
+++ b/index.html
@@ -1,58 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Canada Local Produce – Pixel Perfect Tech Solutions</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Inter:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico">
-</head>
-
-<body>
-    <header>
-        <img src="assets/logo.png" alt="Canada Local Produce Logo">
-        <h1>Canada Local Produce</h1>
-        <div class="tagline">Pixel-perfect tech solutions, designed & delivered locally in Canada</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#services">Services</a>
-            <a href="#about">Why Local?</a>
-            <a href="contact.html">Contact</a>
-            <a href="policy.html">Policy</a>
-        </nav>
-    </header>
-    <div class="section" id="services">
-        <h2>Our Services</h2>
-        <div class="services">
-            <div class="service">
-                <h3>Web Development</h3>
-                <p>Custom responsive sites, apps, and platforms made for Canadian businesses</p>
-            </div>
-            <div class="service">
-                <h3>Process Automation</h3>
-                <p>Workflow integration and streamlined automation tailored for local needs</p>
-            </div>
-            <div class="service">
-                <h3>Tech Consulting</h3>
-                <p>Expert advice and strategy for scaling digital success across Canada</p>
-            </div>
-        </div>
-        <a class="cta-btn" href="contact.html">Book Free Consultation</a>
-    </div>
-    <div class="section" id="about">
-        <h2>Why Choose Canadian Local?</h2>
-        <div class="why">
-            <p>Work directly with talented Canadian developers. Benefit from local expertise, reliable support, and a
-                shared vision for your business growth.</p>
-            <p>All tech, design, and deployment handled in Canada—ensuring quality and accountability with every
-                project.</p>
-        </div>
-    </div>
-    <footer>
-        &copy; 2025 CanadaLocalProduce. <a href="policy.html">Privacy Policy</a>
-    </footer>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>canadalocalproduce</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
